fixed image scaling on mobile

--- a/public/styles/shop.css
+++ b/public/styles/shop.css
@@ -385,7 +385,7 @@
     }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
 
 
     #Vehicles li .carImage{
